--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "chat-app",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "nodemon": "^2.0.7",
+    "babel-eslint": "^10.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -35,47 +38,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "chat application",
+  "main": "index.js",
+  "repository": "https://github.com/CallbackAttack/chat-app",
+  "author": "Yan <yan.doschinskiy@gmail.com>",
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.1.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   }
 }
-
-
-
-// {
-//   "name": "chat-app",
-//   "version": "0.1.0",
-//   "private": false,
-//   "dependencies": {
-//     "@testing-library/jest-dom": "^5.11.4",
-//     "@testing-library/react": "^11.1.0",
-//     "@testing-library/user-event": "^12.1.10",
-//     "nodemon": "^2.0.7",
-//     "react": "^17.0.1",
-//     "react-dom": "^17.0.1",
-//     "react-scripts": "4.0.3",
-//     "web-vitals": "^1.0.1"
-//   },
-//   "scripts": {
-//     "start": "react-scripts start",
-//     "build": "react-scripts build",
-//     "test": "react-scripts test",
-//     "eject": "react-scripts eject"
-//   },
-//   "eslintConfig": {
-//     "extends": [
-//       "react-app",
-//       "react-app/jest"
-//     ]
-//   },
-//   "browserslist": {
-//     "production": [
-//       ">0.2%",
-//       "not dead",
-//       "not op_mini all"
-//     ],
-//     "development": [
-//       "last 1 chrome version",
-//       "last 1 firefox version",
-//       "last 1 safari version"
-//     ]
-//   }
-// }
